--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ shtrgame/Intermediate/*
 shtrgame/Saved/*
 shtrgame/shtrgame.sln*
 # these files are tracked separately by git lfs
-shtrgame/Build/*
-shtrgame/Content/*
-blender_files/*
-downloaded_models/*
+#shtrgame/Build/*
+#shtrgame/Content/*
+#blender_files/*
+#downloaded_models/*
