--- a/shtrgame/Config/DefaultInput.ini
+++ b/shtrgame/Config/DefaultInput.ini
@@ -78,11 +78,13 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +AxisMappings=(AxisName="Drive",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Strafe",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Drive",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Strafe",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="Look",Scale=1.000000,Key=MouseY)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
