--- a/shtrgame/Config/DefaultInput.ini
+++ b/shtrgame/Config/DefaultInput.ini
@@ -78,7 +78,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="Drive",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Strafe",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Drive",Scale=-1.000000,Key=S)
