--- a/shtrgame/Config/DefaultEngine.ini
+++ b/shtrgame/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-GlobalDefaultGameMode=/Game/BP_shtrgameGameModeBase.BP_shtrgameGameModeBase_C
+GlobalDefaultGameMode=/Game/Blueprints/BP_shtrgameGameModeBase.BP_shtrgameGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -14,4 +14,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/shtrgame")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/shtrgame")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="shtrgameGameModeBase")
+
+[/Script/NavigationSystem.RecastNavMesh]
+AgentMaxSlope=89.000000
+AgentMaxStepHeight=300.000000
 
