Revert "unignored uasset"
This reverts commit ec1b3c7ea5cbac286973d846a88ce74c1cddf6e6.

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ shtrgame/shtrgame.sln*
 # uesless files
 *.blend1
 *.log
-#shtrgame/Content/levels/*_BuiltData.uasset
+shtrgame/Content/levels/*_BuiltData.uasset
