--- a/shtrgame/Config/DefaultInput.ini
+++ b/shtrgame/Config/DefaultInput.ini
@@ -81,6 +81,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="DrawGun",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +AxisMappings=(AxisName="Drive",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Strafe",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Drive",Scale=-1.000000,Key=S)
