failed interaction prompt

--- a/shtrgame/shtrgame.uproject
+++ b/shtrgame/shtrgame.uproject
@@ -17,6 +17,10 @@
 		{
 			"Name": "EditorScriptingUtilities",
 			"Enabled": true
+		},
+		{
+			"Name": "ApexDestruction",
+			"Enabled": true
 		}
 	]
 }
