--- a/info.yaml
+++ b/info.yaml
@@ -1,5 +1,8 @@
 --- # blender and so on
 downloaded_sounds:
+  https://pixabay.com/sound-effects/search/clank/?manual_search=1&order=None:
+    - blade-on-wood-metal-clank-tink-63689.mp3
+    - metal-clang-sound-81634.mp3
   https://pixabay.com/sound-effects/search/rifle/:
     - lightmachinegun2-7129.mp3
     - m1-garand-rifle-80192.mp3
