--- a/shtrgame/Config/DefaultEngine.ini
+++ b/shtrgame/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/Levels/TitleMap.TitleMap
 GlobalDefaultGameMode=/Game/Blueprints/BP_shtrgameGameModeBase.BP_shtrgameGameModeBase_C
+EditorStartupMap=/Game/Levels/ActionMap.ActionMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
