added some project metadata

--- a/shtrgame/Config/DefaultGame.ini
+++ b/shtrgame/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=909F4EA84097EED1244B2AA2F75896C3
+Description=CO2301 Assignment Submission by Anikina Anna G20941331
+ProjectName=shtrgame
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "9727BFFC412C232B5AEC8EA74F0C1831", "CO2301 aanikina")
+
